--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <title>  
   Tannu | Frotend Developer 👩‍💻
     </title>
